@@ -74,6 +74,7 @@ classloader=org.apache.tools.ant.taskdefs.Classloader
 import=org.apache.tools.ant.taskdefs.ImportTask
 whichresource=org.apache.tools.ant.taskdefs.WhichResource
 subant=org.apache.tools.ant.taskdefs.SubAnt
+sync=org.apache.tools.ant.taskdefs.Sync
 
 # optional tasks
 image=org.apache.tools.ant.taskdefs.optional.image.Image
